change hero css background url

--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@ section:nth-child(even) {
 
 /* header hero #hero */
 #hero {
-   background: url('/img/header.jpg') no-repeat center center/cover;
+   background: url('../img/header.jpg') no-repeat center center/cover;
    position: relative;
    background-color: var(--deepnavyblue-color);
    height: 600px;
